# GAMEJAM2020

./: .gitignore  CMakeLists.txt  Makefile  buildSFML.bat  buildSFML.sh  builder.bat  builder.sh  main.cpp  run.bat  run.sh
src/: app.cpp  app.hpp  config.cpp  config.hpp  data.hpp  gui.cpp  gui.hpp  main.cpp  physics.cpp  physics.hpp  time.cpp  time.hpp  util.cpp  util.hpp
src/components/: animation.hpp  animationCurve.hpp  camera.cpp  camera.hpp  colorGradient.cpp  colorGradient.hpp  particleSystem.cpp  particleSystem.hpp
src/effects/: text.hpp
src/entity/: entity.hpp  player.cpp  player.hpp
src/gui/: gui.cpp  gui.hpp
src/managers/: audioManager.cpp  audioManager.hpp  fontManager.cpp  fontManager.hpp  mapManager.cpp  mapManager.hpp  stateManager.cpp  stateManager.hpp  textureManager.cpp  textureManager.hpp
src/physics/: circleCollider.cpp  circleCollider.h  circleCollider.hpp  collider.cpp  collider.h  collider.hpp  collisionDetector.cpp  collisionDetector.hpp  physics.hpp  playerCollisionDetector.cpp  playerCollisionDetector.hpp  rectangleCollider.cpp  rectangleCollider.h  rectangleCollider.hpp
src/states/: game.cpp  game.hpp  menu.hpp  state.hpp
